<resources>
    <string name="app_name">UpShop</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_orders">My orders</string>
    <string name="menu_Chats">Chats</string>
    <string name="menu_setting">Setting</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Language">Language</string>
    <string name="Logout">Logout</string>
    <string name="logoutDescription">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection_desc">Please check your internet connection and try again.</string>
    <string name="Something_went_wrong">Something went wrong please try again</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="welcome">Welcome to Up-Shops</string>
    <string name="new_account_title">Create New Account</string>
    <string name="new_account_description">Enter your details to create account</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="dont_have_Account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="send_confirmation_code_desc">By tapping "Send confirmation code" above, we will send you an SMS to confirm your phone number.On then next screen, you can choose "Resend code" to initiate another SMS or "Send audio code" to initiate a phone call to confirm your phone number.Charges may apply for SMS, phone calls or data usage</string>
    <string name="btn_send_confirmation_code">Send Confirmation Code</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Submit</string>
    <string name="resend_new_code"><u>Resend New Code</u></string>
    <string name="didn_t_you_received_any_code">Didn\'t you received any code?</string>
    <string name="otp_validation">OTP Validation</string>
    <string name="enter_your_otp_here">Enter Your OTP here</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forget_desc">Lorem ipsum dolor</string>
    <string name="personal_details">Personal Details</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="business_details">Business Details</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading...</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="try_again">Try Again</string>
    <string name="no_connection">No connection</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="no_data_found_desc">Sorry, we’re having some technical issues.Try to refresh the page.</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="under_maintenance_desc">The page you’re looking for is currently under maintenance and will be back soon.</string>
    <string name="something_went_wrong">Something went wrong please try again</string>
    <string name="server_error">Server Error</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="no_phone_number_Found"> Phone Number is not Found</string>
    <string name="no_whatsapp_found"> No WhatsApp Found</string>
    <string name="invalid_whatsapp_number"> Invalid WhatsApp Number </string>
    <string name="permission_denied"> Permission denied </string>
    <string name="setting"> Setting </string>
    <string name="reject_permission_desc"> If you reject permission,you can not use this service Please turn on permissions at [Setting] > [Permission] </string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="send_message">Send Message</string>
    <string name="create_new">Create New</string>
    <string name="shop_Account">Shop Account</string>
    <string name="new_shop_account_description">Enter your details to create an Shop account</string>
    <string name="user_account">User Account</string>
    <string name="browse">Browse</string>
    <string name="add_a_shop_photo_up_to_5">Add a shop photo(Up to 5)</string>
    <string name="shop_photo_upload_limit">Maximum upload limit is 5</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="otp_resend">Resend Otp Successfully</string>
    <string name="otp_send">Otp Send Successfully</string>
    <string name="otp_verified_successfully">Otp Verified Successfully</string>
    <string name="password_reset_successfully">Password Reset Successfully</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="phone_number_length">Phone Number must be between 8 and 12 digits</string>
    <string name="password_length">Password Length  must be minimum 8 digits</string>
    <string name="valid_Otp">Please Enter Valid Otp</string>
    <string name="enter_user_type">Please Select UserType</string>
    <string name="sec">Sec</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="password_mismatch">Password Mismatch,Please Enter valid password</string>
    <string name="password_asterisk">Password *</string>
    <string name="re_enter_password_asterisk">Re-Enter Password *</string>
    <string name="token_expired">Token Expired......</string>
    <string name="email_asterisk">Email *</string>
    <string name="phone_asterisk">Phone *</string>
    <string name="name_asterisk">Name *</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_msg">Please Enter Message</string>
    <string name="please_enter_Phone">Please Enter Phone Number</string>
    <string name="change_password_label">Change Password</string>
    <string name="please_enter_old_passwor">Please Enter Old Password</string>
    <string name="old_password">Old Password</string>
    <string name="message_send_successfully">Message Sent Successfully</string>
    <string name="shop">Shop</string>
    <string name="product">Product</string>
    <string name="notification_update">Notification update Successfully</string>
    <string name="task_canceled">Task Canceled</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="select_category">Select Category</string>
    <string name="select_shop">Select Shop</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="are_you_the_shop_owner">Are you the shop owner?</string>
    <string name="select">Select</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="add_location">Add Location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="your_name">Your Name</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="add_a_shop">Add A Shop</string>
    <string name="account">Accounts</string>
    <string name="data_is_empty">Invalid Data</string>
    <string name="enter_email_and_password">Please enter email and password</string>
    <string name="enter_email_or_phone">Please Enter Email or Phone number</string>
    <string name="stop_categories">Stop Categories</string>
    <string name="view_all">View all</string>
    <string name="store_favourite">Store Favourite</string>
    <string name="additional_info">Additional Info</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="add_to_basket">Add to Cart</string>
    <string name="save">Save</string>
    <string name="favourite">Favourite</string>
    <string name="overview">OverView</string>
    <string name="service">Service</string>
    <string name="rating">Rating</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="share">Share</string>
    <string name="delivery">Delivery</string>
    <string name="quality">Quality</string>
    <string name="price_tag">Price</string>
    <string name="edit">Edit</string>
    <string name="notification">Notification</string>
    <string name="manage_address">Manage Address</string>
    <string name="access_permission">Access Permission</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="help_and_support">Help and support</string>
    <string name="logout">Logout</string>
    <string name="enter_your_messsage">Enter your message</string>
    <string name="message">Message</string>
    <string name="logout_succesfully">Logout Successfully</string>
    <string name="my_Cart">My Cart</string>
    <string name="product_quantity_minimum_1">Product quantity can not be less than 1</string>
    <string name="send_a_quote">Send A Quote</string>
    <string name="items">items</string>
    <string name="Empty_Cart_title">Your Cart is Empty</string>
    <string name="Empty_Cart_desc">Look like you have not select your product yet </string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="enter_your_bid">enter your bid</string>
    <string name="deliver_to">Deliver To</string>
    <string name="change_address">Change Address</string>
    <string name="use_as_the_shipping_address">Use as the shipping address</string>
    <string name="edit_address">Edit Address</string>
    <string name="add_address">Add Address</string>
    <string name="select_machine">Select Machines</string>
    <string name="select_all">Select all</string>
    <string name="price">Price AED</string>
    <string name="new_orders">New Orders</string>
    <string name="view_order_details">VIEW ORDER DETAILS</string>
    <string name="quote_request_id">Quote request ID:</string>
    <string name="view_quote">View Quote</string>
    <string name="new_rfq">New RFQ’s</string>
    <string name="new_title">New</string>
    <string name="closed">Closed</string>
    <string name="in_progress">In Progress</string>
    <string name="quantity">Quantity :</string>
    <string name="quote_price">Quote Price:</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="order_number">Order No:</string>
    <string name="details">Details</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_information">Order Information</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="delivery_method">Delivery Method:</string>
    <string name="total_amount">Total Amount:</string>
</resources>