<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favorite"
        android:title="@string/menu_favourites" />
    <item
        android:id="@+id/navigation_myorders"
        android:icon="@drawable/myorder"
        android:title="@string/menu_orders" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat"
        android:title="@string/menu_Chats" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/menu_setting" />
</menu>