<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <include
            layout="@layout/include_top_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_22sdp"
            android:fontFamily="@font/moderat_medium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_25ssp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/moderat_regular"
            android:text="@string/forget_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/moderat_regular"
            android:text="@string/email_phone_number"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/moderat_regular"
            android:maxLength="100"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <include
            android:id="@+id/forget"
            layout="@layout/include_common_btn" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>