<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.common.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:scrollbars="none"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--shop name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/moderat_medium"
                android:text="@string/name"


                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rect_border_grey"
                android:fontFamily="@font/moderat_regular"
                android:hint="@string/name"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />


            <!--yourname-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/moderat_medium"
                android:text="@string/email"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rect_border_grey"
                android:fontFamily="@font/moderat_regular"
                android:hint="@string/email"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />
            <!--Message-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/moderat_medium"
                android:text="@string/message"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rect_border_grey"
                android:fontFamily="@font/moderat_regular"
                android:gravity="start"
                android:hint="@string/enter_your_messsage"
                android:maxLength="5000"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/_12ssp" />

            <include
                android:id="@+id/btn"
                layout="@layout/include_common_btn" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>