<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvAccessToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_22sdp"
            android:fontFamily="@font/moderat_bold"
            android:gravity="center"
            android:text="@string/change_password_label"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/xxlarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/moderat_regular"
            android:text="@string/old_password"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/medium" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/oldlaypass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_border_grey"
                android:fontFamily="@font/moderat_regular"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/old_show_pass_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha=".8"
                android:contentDescription="TODO"
                android:padding="5dp"
                android:src="@drawable/password_visibility_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/oldlaypass"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_grey" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/moderat_regular"
            android:text="@string/password_asterisk"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/medium" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/laypass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_black"
                android:fontFamily="@font/moderat_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha=".8"
                android:contentDescription="TODO"
                android:padding="5dp"
                android:src="@drawable/password_visibility_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/laypass"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_grey" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/moderat_regular"
            android:text="@string/re_enter_password_asterisk"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/_12ssp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/re_laypass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border_black"
                android:fontFamily="@font/moderat_regular"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:maxLength="100"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/small"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/show_re_pass_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:alpha=".8"
                android:contentDescription="TODO"
                android:padding="5dp"
                android:src="@drawable/password_visibility_off"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/re_laypass"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_grey" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/reset"
            layout="@layout/include_common_btn" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>